--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
+	<script src="boot.js"></script>
+	<script src="binaryPuzzle.js"></script>
 	<script src="phaser.min.js"></script>
 </head>
 <body>
 	<script type="text/javascript">
 	window.onload = function() {
-
-        //  Note that this html file is set to pull down Phaser 2.5.0 from the JS Delivr CDN.
-        //  Although it will work fine with this tutorial, it's almost certainly not the most current version.
-        //  Be sure to replace it with an updated version before you start experimenting with adding your own code.
-
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
-
-        function preload () {
-
-            game.load.image('logo', 'phaser.png');
-
-        }
-
-        function create () {
-
-            var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
-        }
+        Hacked.game = Hacked.game || new Phaser.Game(800, 600, Phaser.AUTO, 'canvas-div');
+		Hacked.game.state.add('Boot', Hacked.Boot);
+		Hacked.game.state.add('Binary', Hacked.Binary);
+		Hacked.game.state.start('Binary');
 	}
 	</script>
 </body>
