runs the Boot state before the Binary state to set up the basic game architecture

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         Hacked.game = Hacked.game || new Phaser.Game(800, 600, Phaser.AUTO, 'canvas-div');
 		Hacked.game.state.add('Boot', Hacked.Boot);
 		Hacked.game.state.add('Binary', Hacked.Binary);
-		Hacked.game.state.start('Binary');
+		Hacked.game.state.start('Boot');
 	}
 	</script>
 </body>
