adds a hacked-methods.js file which adds methods directly on the hacked object to use in the game.  adds this file to the index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<title></title>
 	<script src="boot.js"></script>
 	<script src="binaryPuzzle.js"></script>
+	<script src="hacked-methods.js"></script>
 	<script src="phaser.min.js"></script>
 </head>
 <body>
