adds the changed hackedMethods.js, the new binaryMethods.js to the imports

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 	<title></title>
 	<script src="boot.js"></script>
 	<script src="binaryPuzzle.js"></script>
-	<script src="hacked-methods.js"></script>
+	<script src="hackedMethods.js"></script>
+	<script src="binaryMethods.js"></script>
 	<script src="phaser.min.js"></script>
 </head>
 <body>
