adds a hacked constants obj on the Hacked game obj to hold stats of the individual puzzles.

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<script src="boot.js"></script>
 	<script src="binaryPuzzle.js"></script>
 	<script src="interlude.js"></script>
+	<script src="hackedConstants.js"></script>
 	<script src="hackedMethods.js"></script>
 	<script src="binaryMethods.js"></script>
 	<script src="phaser.min.js"></script>
